--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ a {
   width: 100%;
   height: 100%; }
   .places__info {
-    padding-left: 10px; }
+    padding: 0 10px; }
   .places__name {
     margin: 5px 0 0;
     font-size: 25px;
@@ -28,13 +28,12 @@ a {
     white-space: nowrap; }
   .places__list {
     padding: 0;
-    margin: 10px 0 20px;
+    margin: 20px 2%;
     list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly; }
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 20px; }
   .places__card {
-    width: 48%;
     background: #fefefe;
     margin-top: 5px;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
@@ -74,7 +73,9 @@ a {
     border: 2px solid #666;
     cursor: pointer;
     transform: none;
-    transition: all 0.2s ease; }
+    transition: all 0.2s ease;
+    text-overflow: ellipsis;
+    white-space: nowrap; }
     .places__type:hover {
       transform: scale(1.05);
       color: black;
@@ -84,7 +85,8 @@ a {
     .places__type-list {
       list-style: none;
       display: flex;
-      justify-content: end; }
+      justify-content: end;
+      flex-wrap: wrap; }
 
 .loading {
   width: 100%;
