--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@ $grey: #666;
 $brandColour: #FF5722;
 $gradientColour: #FF5722;
 $uniformMargin: 5px;
+$uniformGridGap: 20px;
 
 html, body {
   height: 100%;
@@ -29,7 +30,7 @@ a{
   height: 100%;
 
   &__info{
-    padding-left: 10px;
+    padding:0 10px;
   }
 
   &__name{
@@ -42,15 +43,17 @@ a{
 
   &__list{
     padding:0;
-    margin:10px 0 20px;
+    margin:$uniformGridGap 2%;
     list-style: none;
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    //this grid display is responsible for the responsiveness
+    //The repeat() function takes two arguments, the first will define the number of column tracks and the second, what width the tracks should be.
+    //he minmax function will create track widths that can be a minimum of 320px wide and a maximum of 1fr.
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: $uniformGridGap;
   }
 
   &__card{
-    width:48%;
     background: #fefefe;
     margin-top:$uniformMargin;
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
@@ -104,6 +107,8 @@ a{
     cursor: pointer;
     transform:none;
     transition: all 0.2s ease;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     &:hover{
       transform:scale(1.05);
       color: black;
@@ -117,6 +122,7 @@ a{
       list-style: none;
       display: flex;
       justify-content: end;
+      flex-wrap: wrap;
     }
   }
 
