--- a/css/style.scss
+++ b/css/style.scss
@@ -43,7 +43,7 @@ a{
 
   &__list{
     padding:0;
-    margin:$uniformGridGap 2%;
+    margin:70px 2% $uniformGridGap;
     list-style: none;
     //this grid display is responsible for the responsiveness
     //The repeat() function takes two arguments, the first will define the number of column tracks and the second, what width the tracks should be.
@@ -128,6 +128,24 @@ a{
 
 }
 
+//navigation styles
+.navigation{
+  height:50px;
+  width:100%;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  background: white;
+  top:0;
+  box-shadow: 0px 1px 10px #999;
+  z-index: 10;
+  span, button{
+    margin-left:20px;
+    font-size:15px;
+  }
+}
+
+//loading styles
 .loading{
   width: 100%;
   height: 100%;
